# Tarkov-Rich-Presence

./: .gitignore  README.md  locations.yml  logger.yml  main.py  pyproject.toml  release_manifest.json  settings.yml
scripts/: README.md  builder.py  release.py
src/: const.py  loops.py  schemas.py  settings.py  storage.py  utils.py  workers.py
src/analyzer/: deque_service.py  service.py  utils.py
src/exceptions/: service.py
src/github/: api.py  utils.py  version.py
src/presence/: service.py
src/profile/: schemas.py  service.py
src/widgets/: main_widget.py  tray_widget.py
