[project]
name = "eftdiscord"
version = "0.1.0"
description = ""
authors = [
    {name = "LedxDelivery"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pypresence @ http://github.com/qwertyquerty/pypresence/archive/master.zip",
    "psutil (>=7.1.3,<8.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
